--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,11 @@ jobs:
           rustup component add clippy
           rustup component add rustfmt
 
+      - name: Install automake on MacOS
+        if: startsWith(matrix.os, 'macOS')
+        run: |
+          brew install automake
+
       - name: Log versions
         run: |
           rustc --version
