--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,91 +10,26 @@ jobs:
       matrix:
         os: [macOS-latest, ubuntu-latest, windows-latest]
 
-      fail-fast:
-        ${{ github.event_name == 'pull_request' || (github.ref !=
-        'refs/heads/main' && !startsWith(github.ref, 'refs/tags/')) }}
-
-    env:
-      CARGO_INCREMENTAL: 0
-      RUST_BACKTRACE: full
-
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - uses: denoland/setup-deno@v1
 
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          components: rustfmt, clippy
+      - name: Format
+        run: deno fmt --check
 
-      - name: Install rust
-        uses: hecrj/setup-rust-action@v1
+      - name: Lint
+        run: deno lint
 
-      - name: Install clippy and rustfmt
-        run: |
-          rustup component add clippy
-          rustup component add rustfmt
-
-      - name: Install automake on MacOS
-        if: startsWith(matrix.os, 'macOS')
-        run: |
-          brew install automake
-
-      - name: Log versions
-        run: |
-          rustc --version
-          cargo --version
-
-      - name: Cache
-        uses: actions/cache@v2
-        with:
-          path: |-
-            target/*/.*
-            target/*/build
-            target/*/deps
-          key:
-            ${{ matrix.config.os }}-${{ hashFiles('Cargo.lock') }}
-          restore-keys: |
-            ${{ matrix.config.os }}-
-
-      - name: Run cargo fmt
-        run: cargo fmt --all -- --check
-
-      - name: Run cargo check
-        run: cargo check --locked
-
-      - name: Run cargo clippy
-        run: cargo clippy -- -D warnings
-
-      - name: Build release
-        run: cargo build --release --locked
-
-      - name: Run cargo test
-        run: cargo test --locked
+      - name: Tests
+        run: deno test --unstable --allow-ffi
 
       - name: Release
         uses: softprops/action-gh-release@v1
         if: |
-          startsWith(github.repository, 'justjavac') &&
+          matrix.os == 'ubuntu-latest' &&
+          startsWith(github.repository, 'denoffi') && 
           startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: |
-            target/release/libdeno_plugin_ffi.dylib
-            target/release/libdeno_plugin_ffi.so
-            target/release/deno_plugin_ffi.dll
           draft: true
-
-      - name: Publish
-        if: |
-          startsWith(matrix.os, 'ubuntu') &&
-          startsWith(github.repository, 'justjavac') &&
-          startsWith(github.ref, 'refs/tags/')
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: |
-          cargo publish
